# lem_vis

./: Makefile  author  lem-in  vs
Visualisation_lem_in/: CMakeLists.txt  Makefile  main.c  only_rooms  trial.c  visualisation.h
Visualisation_lem_in/includes/: errors.h  visualisation.h
Visualisation_lem_in/libft/: Makefile  ft_freetwodarr.c
Visualisation_lem_in/libft/includes/: libft.h
Visualisation_lem_in/sources/: calc_room_size.c  free_funcs.c  helper.c  main.c  save_room.c  validation.c
include/: errors.h  lem_in.h  parsing.h  vis.h  vis_errors.h  vis_validation.h
libft/: Makefile  ft_atoi.c  ft_atoll.c  ft_atoull.c  ft_avl_tree_inorder.c  ft_avl_tree_insert.c  ft_avl_tree_new.c  ft_avl_tree_postorder.c  ft_avl_tree_preorder.c  ft_avl_tree_rotations.c  ft_avl_tree_search.c  ft_bzero.c  ft_ctoa.c  ft_error.c  ft_free_strsplit.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_lltoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_printf.c  ft_printf_asterisk_handler.c  ft_printf_floats.c  (+55 more)
src/lem-in/: ants_journey.c  choose_paths_set.c  find_extra_paths.c  find_paths.c  main.c  modify_farm.c  visit_links.c
src/parsing/: build_farm.c  clean_up.c  cmp_funcs.c  lists.c  read_farm.c  validate_farm.c
src/vs/: animate_solution.c  calc_sizes.c  check_for_ant.c  check_for_link.c  check_for_room.c  check_for_type.c  create_iter.c  display_ants.c  display_objs.c  (+17 more)
